--- a/a.html
+++ b/a.html
@@ -51,8 +51,12 @@
                                                              <h3> Definition</h3>
                                                              <br>
                                                              <br>
-                                                             <p>La balise &ltbody&gt définit le corps du document.
-                                                                L'élément &ltbody&gt contient tout le contenu d'un document HTML, tel que du texte, des hyperliens, des images, des tableaux, des listes, etc.</p>
+                                                             <p>Cette balise permet de créer une ancre pour liens hypertexte
+                                                                Le plus important attribut de la balise <a> est l'attribu href, qui indique le lien à ouvrir<br>
+                                                                Par défaut, les liens apparaissent comme ceci dans les navigateurs :<br>
+                                                                Un lien non visité est surligné en bleu<br>
+                                                                Un lien visité est surligné en violet<br>
+                                                                Un lien actif est surligné en rouge</p>
                      </div>
                      <div id="Exemple" class="exemple">
                             <br>
@@ -67,16 +71,10 @@
                                                                 <h3>Exemple</h3>
                                                                 <br>
                                                                 <br>
-                                                                <p><html>
-                                                                    &lthead&gt
-                                                                    &lttitle&gt Titre du document&lttitle&gt
-                                                                    &lthead&gt
-                                                                    
-                                                                    &ltbody&gt
-                                                                    Contenu du document......
-                                                                    &ltbody&gt
-                                                                    
-                                                                    &lthtml&gt
+                                                                <p><xmp>Un lien vers W3Schools.com:
+                                                                    <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </xmp>
+                                                                    <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+                                                                    </p>
                         </div>
                 </main>
          <footer>
