--- a/a.html
+++ b/a.html
@@ -39,35 +39,18 @@
          </header>
                  <main>
                      <div id="Definition" class="definition">
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                         <br>
-                                                             <h3> Definition</h3>
+                                                            <h3> Definition</h3>
                                                              <br>
                                                              <br>
                                                              <p>Cette balise permet de créer une ancre pour liens hypertexte
-                                                                Le plus important attribut de la balise <a> est l'attribu href, qui indique le lien à ouvrir<br>
+                                                                Le plus important attribut de la balise  est l'attribu href, qui indique le lien à ouvrir<br>
                                                                 Par défaut, les liens apparaissent comme ceci dans les navigateurs :<br>
                                                                 Un lien non visité est surligné en bleu<br>
                                                                 Un lien visité est surligné en violet<br>
                                                                 Un lien actif est surligné en rouge</p>
                      </div>
                      <div id="Exemple" class="exemple">
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
+                           
                                                                 <h3>Exemple</h3>
                                                                 <br>
                                                                 <br>
